docs/spmed/report mail/24.01.02/index.md
# 24.01.02 [Tuesday]

TO: hieu.nguyen@spmed.kr; phan.kien@spmed.kr; park.sy@spmed.kr; phshinjg@gmail.com; shin.jg@spmed.kr; lam.nguyen@spmed.kr;

CC: kwak.js@spmed.kr;

BCC: park.bh@spmed.kr

SUBJECT: [Tuesday, 24.01.02] Bob - Remote work plan

## PLAN

Dear all,

I would like to send my plan today.

### 모바일 애플리케이션: 모바일 애플리케이션의 챗봇 기능을 위한 사용자 인터페이스 디자인.

- 요청자: PMSD 팀(램리서치)
- 목적: 애플리케이션의 제너레이티브 AI 모델을 통해 사용자 경험을 향상시킵니다. 이는 향후 개인화된 AI 챗봇을 위한 기반입니다.
- 설명: 모바일 애플리케이션의 챗봇 기능을 위한 사용자 인터페이스 설계
- 계획: 24.01.02 ~ 24.01.03, 2일간
- Status: 1/2일차
- 참조: https://spmed1602.sharepoint.com/:w:/g/EckCnRT2qchEp3IL_9Z0zPIBVy06-9Q-lKI77F8VF9uNTg?e=EFW1gJ

### Mobile Application: Design User Interface for ChatBot Function on Mobile Application.

- Requester: PMSD team (Lam)
- Purpose: Increase user experience with generative AI models for our application. It is a foundation for a personalized AI Chatbot in the future.
- Description: Design User Interface for ChatBot Function on Mobile Application
- Plan: 2 days From 24.01.02 to 24.01.03
- Status: Day 1/2
- Reference: https://spmed1602.sharepoint.com/:w:/g/EckCnRT2qchEp3IL_9Z0zPIBVy06-9Q-lKI77F8VF9uNTg?e=EFW1gJ

Best regards,

Bob

## REPORT

Dear all,

I would like to send my report.

### 모바일 애플리케이션: 모바일 애플리케이션의 챗봇 기능을 위한 사용자 인터페이스 디자인.

- 요청자: PMSD 팀(램리서치)
- 목적: 애플리케이션의 제너레이티브 AI 모델을 통해 사용자 경험을 향상시킵니다. 이는 향후 개인화된 AI 챗봇을 위한 기반입니다.
- 설명: 모바일 애플리케이션의 챗봇 기능을 위한 사용자 인터페이스 설계
- 계획: 24.01.02 ~ 24.01.03, 2일간
- Status: 1/2일차
- 참조: https://spmed1602.sharepoint.com/:w:/g/EckCnRT2qchEp3IL_9Z0zPIBVy06-9Q-lKI77F8VF9uNTg?e=EFW1gJ

### Mobile Application: Design User Interface for ChatBot Function on Mobile Application.

- Requester: PMSD team (Lam)
- Purpose: Increase user experience with generative AI models for our application. It is a foundation for a personalized AI Chatbot in the future.
- Description: Design User Interface for ChatBot Function on Mobile Application
- Plan: 2 days From 24.01.02 to 24.01.03
- Status: Day 1/2
- Reference: https://spmed1602.sharepoint.com/:w:/g/EckCnRT2qchEp3IL_9Z0zPIBVy06-9Q-lKI77F8VF9uNTg?e=EFW1gJ

Best regards,

Bob
